# MagicGifs

./: .gitignore  README.md  Readme.md  magicgif.py  pyproject.toml  requirements.txt  setup.py
magic_gifs/: __main__.py
