[tool.poetry]
name = "magicgifs"
version = "0.1.0"
description = ""
authors = ["Chris Barry <2490974+ChrisW-B@users.noreply.github.com>"]

packages = [
    { include = "magic_gifs" },
]

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^4.0.0"
textblob = "^0.15.3"
wordfilter = "^0.2.7"
requests = "^2.25.1"
giphypop = "^0.3"
cfg-load = "^0.9.0"

[tool.poetry.dev-dependencies]
pylint = "^2.7.2"
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "magic_gifs.__main__:main"
